[package]
name = "crinkler-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", default-features = false }
libc = { version = "0.2.147", default-features = false }
libc-print = "0.1.21"
libc_alloc = "1.0.5"
vc-ltl = "5.0.8"
winapi = { version = "0.3.9", features = ["processthreadsapi"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
